# skin-lesion-classification

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
docs/: .gitkeep
models/: README.md
results/: README.md  __huggingface_repos__.json  efficientnet_test_predictions.csv  vit_test_predictions.csv
src/: __init__.py  config.py  dataset.py  evaluate.py  loss.py  models.py  preprocess.py  train.py  visualize.py
tests/: README.md  test_smoke.py
