[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "skin-lesion-classification"
version = "1.0.0"
description = "EfficientNet-B3 vs ViT-B/16 benchmark on HAM10000 dermoscopic images"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Yasir Alazmi", email = "" }]
requires-python = ">=3.10"
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "timm==0.9.12",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/Yasir-Alazmi/skin-lesion-classification"
Repository = "https://github.com/Yasir-Alazmi/skin-lesion-classification"
Issues = "https://github.com/Yasir-Alazmi/skin-lesion-classification/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311"]

# ── isort ───────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100

# ── flake8 (via setup.cfg or tox.ini; listed here for reference) ─────────
# flake8 doesn't natively read pyproject.toml, use .flake8 file if needed.

# ── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
